enable gc log