@@ -2,8 +2,4 @@
 
 CLASSPATH="eureka-server-1.0-SNAPSHOT.jar"
 
-MAIN_CLASS="org.springframework.boot.loader.PropertiesLauncher"
-JAVA_CMD=java
-echo $CLASSPATH
-
-$JAVA_CMD -classpath "$CLASSPATH" $MAIN_CLASS
+java -XX:-PrintGC -XX:+PrintGCDetails -verbose:gc -Xloggc:gc.log -jar  $CLASSPATH
